# store-sales-kaggle

./: README.md  Store-Sales-Notebook.ipynb  pyproject.toml
